--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,6 +29,25 @@ body {
   z-index: -9996;
   background: rgba(0, 0, 0, 0.9); }
 
+#top-bar-error {
+  position: fixed;
+  top: 18px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 250px;
+  height: 100px;
+  background: #0C0C0C;
+  border-left: 0px solid #C1C2B2;
+  border-right: 0px solid #C1C2B2;
+  border-bottom: 0px solid #C1C2B2;
+  border-radius: 6px;
+  display: none; }
+  #top-bar-error p {
+    text-align: center;
+    color: white;
+    margin-top: 35px;
+    font-size: 1.3em; }
+
 #background-canvas {
   width: 100%;
   height: 100%;
@@ -55,8 +74,7 @@ body {
     position: fixed;
     top: -20px;
     left: 10%;
-    text-decoration: none;
-    color: transparent; }
+    text-decoration: none; }
     #background-graphic .thought-wrapper .thought {
       position: relative;
       transform: translate(-50%, -50%);
@@ -107,7 +125,7 @@ body {
   right: 0;
   border-radius: 3px;
   width: 300px;
-  height: 100px;
+  height: 150px;
   /*height: 300px;*/
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
   background: rgba(0, 0, 0, 0.5);
