--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,6 +41,13 @@
 	transition: background 0.5s ease-in-out;
 }
 
+@mixin center {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
 @mixin successButtonHover {
 	background: rgba(0, 216, 51, 0.9) !important;
 }
@@ -97,15 +104,43 @@ body {
 }
 
 
+
+
 //--------------------------
-//	Dark Overlay Background
+//	Background Overlay
 //--------------------------
+//* Unfocus Overlay
 #dark-overlay {
 	width: 100%;
 	height: 100%;
 	position: fixed;
 	z-index: -9996;
 	background: rgba(0, 0, 0, 0.9);
+}
+
+//* Active Thought Overlay
+
+
+//* Top Bar Error Overlay
+#top-bar-error {
+	position: fixed;
+	top: 18px;
+	left: 50%;
+	transform: translate(-50%, 0);
+	width: 250px;
+	height: 100px;
+	background: #0C0C0C;
+	border-left: 0px solid $font-color-grey;
+	border-right: 0px solid $font-color-grey;
+	border-bottom: 0px solid $font-color-grey;
+	border-radius: 6px;
+	display: none;
+	p {
+		text-align: center;
+		color: white;
+		margin-top: 35px;
+		font-size: 1.3em;
+	}
 }
 
 //--------------------------
@@ -136,7 +171,7 @@ body {
 		top: -20px;
 		left: 10%;
 		text-decoration: none;
-		color: transparent;
+		//opacity: 0;
 		.thought {
 			position: relative;
 			transform: translate(-50%, -50%);
@@ -200,12 +235,13 @@ body {
 	float: none;
 	margin: auto;
 	position: absolute;
+
 	z-index: 0;
 	top: 0; left: 0; bottom: 0; right: 0;
 	//border-radius: 6px;
 	border-radius: 3px;
 	width: 300px;
-	height: 100px;
+	height: 150px;
 	/*height: 300px;*/
 	box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
 	background: $background-color;
