--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,6 +20,35 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i');
 
 //--------------------------
+//	Global Variables
+//--------------------------
+$font-color-white: #E2E2CE;
+$font-color-grey: #C1C2B2;
+$input-box-background: rgba(0, 0, 0, 0.3);
+$border-yellow: 1px solid #E6C72C;
+$border-purple: 1px solid #810CA5;
+$background-color: rgba(0, 0, 0, 0.5);
+$main-font: "Nunito Sans", sans-serif;
+
+*, *:after, *:before {
+	box-sizing: border-box;
+}
+
+body {
+	/*background: rgba(0, 0, 0, 0.9);*/
+    overflow: hidden;
+    font-family: "Nunito Sans", sans-serif;
+	#loading-screen {
+		position: fixed;
+		width: 100vw;
+		height: 100vh;
+		z-index: 10;
+		background: rgba(255, 255, 255, 1);
+	}
+}
+
+
+//--------------------------
 //	Mixins
 //--------------------------
 @mixin buttonFormat {
@@ -33,7 +62,7 @@
 	left: 50%;
 	background: black;
 	border: 1px solid white;
-	width: 170px;
+	width: 60px;
 	height: 35px;
 	border-radius: 10px;
 	background:black;
@@ -74,36 +103,6 @@
 	animation-direction: alternate;
 	opacity: 0;
 }
-
-/********************/
-/* GLOBAL VARIABLES */
-/********************/
-$font-color-white: #E2E2CE;
-$font-color-grey: #C1C2B2;
-$input-box-background: rgba(0, 0, 0, 0.3);
-$border-yellow: 1px solid #E6C72C;
-$border-purple: 1px solid #810CA5;
-$background-color: rgba(0, 0, 0, 0.5);
-$main-font: "Nunito Sans", sans-serif;
-
-*, *:after, *:before {
-	box-sizing: border-box;
-}
-
-body {
-	/*background: rgba(0, 0, 0, 0.9);*/
-    overflow: hidden;
-    font-family: "Nunito Sans", sans-serif;
-	#loading-screen {
-		position: fixed;
-		width: 100vw;
-		height: 100vh;
-		z-index: 10;
-		background: rgba(255, 255, 255, 1);
-	}
-}
-
-
 
 
 //--------------------------
