--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -61,9 +61,10 @@ body {
 	top: 50%;
 	left: 50%;
 	background: black;
-	border: 1px solid white;
+	//border: 1px solid white;
 	width: 60px;
 	height: 35px;
+	border: none !important;
 	border-radius: 10px;
 	background:black;
 	outline: none;
@@ -597,9 +598,11 @@ body {
 		margin-left: -75px;
 		top: 50%;
 		left: 50%;
-		background: transparent;
-		border: 1px solid white;
+		background: black;
+		//border: 1px solid white;
+		border: none !important;
 		border-radius: 5px;
+		padding: 5px 5px 5px 5px;
 		@media (max-width: 480px) {
 			margin-top: 80px;
 		}
@@ -616,12 +619,15 @@ body {
 		top: 50%;
 		left: 50%;
 		margin-top: 100px;
-		background: none;
+		background: black;
 		color: white;
-		margin-left: -15px;
+		margin-left: -12px;
 		margin: 1px solid white !important;
 		border-radius: 5px !important;
 		outline: none;
+		text-align: center;
+		border: none !important;
+		padding-left: 10px;
 		@media (max-width: 480px) {
 			margin-top: 80px;
 		}
@@ -635,12 +641,15 @@ body {
 		top: 50%;
 		left: 50%;
 		margin-top: 100px;
-		margin-left: 60px;
-		background: none;
+		margin-left: 70px;
+		background: black;
 		color: white;
+		border: none !important;
+		text-align: center;
 		margin: 1px solid white !important;
 		border-radius: 5px !important;
 		outline: none;
+		padding-left: 10px;
 		@media (max-width: 480px) {
 			margin-top: 80px;
 		}
@@ -703,7 +712,7 @@ body {
 				color: black;
 				resize: none;
 				outline: none;
-				font-family: sans-serif;
+				//font-family: sans-serif;
 				font-size: 12pt;
 				@media (max-width: 480px) {
 					width: 200px;
@@ -852,9 +861,10 @@ body {
 		left: 50%;
 		margin-top: 160px;
 		background: black;
-		border: 1px solid white;
-		width: 170px;
+		//border: 1px solid white;
+		width: 60px;
 		height: 35px;
+		border: none !important;
 		border-radius: 10px;
 		/*background: linear-gradient(130deg, rgba(65, 187, 65, 0.8) 60%, rgba(204, 230, 200, 0.8) 80%, rgba(65, 187, 65, 0.8) 95%);*/
 		background:black;
@@ -878,8 +888,9 @@ body {
 		left: 50%;
 		margin-top: 205px;
 		background: black;
-		border: 1px solid white;
-		width: 170px;
+		//border: 1px solid white;
+		border: none !important;
+		width: 60px;
 		height: 35px;
 		border-radius: 10px;
 		outline: none;
@@ -1028,7 +1039,7 @@ body {
 				color: black;
 				resize: none;
 				outline: none;
-				font-family: sans-serif;
+				//font-family: "sans-serif";
 				font-size: 12pt;
 				text-align: center;
 				vertical-align: middle;
@@ -1051,7 +1062,7 @@ body {
 		left: 50%;
 		margin-top: 160px;
 		background: black;
-		border: 1px solid white;
+		//border: 1px solid white;
 		width: 170px;
 		height: 35px;
 		border-radius: 10px;
@@ -1078,14 +1089,14 @@ body {
 		left: 50%;
 		margin-top: 205px;
 		background: black;
-		border: 1px solid white;
-		width: 170px;
+		//border: 1px solid white;
+		width: 60px;
 		height: 35px;
 		border-radius: 10px;
 		outline: none;
 		/*background: linear-gradient(130deg, rgba(65, 187, 65, 0.8) 60%, rgba(204, 230, 200, 0.8) 80%, rgba(65, 187, 65, 0.8) 95%);*/
 		background: black;
-	
+		border: none !important;
 		transition: background 0.5s ease-in-out;
 		@media (max-width: 480px) {
 			margin-top: 185px;
